--- a/index.html
+++ b/index.html
@@ -4,35 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        body{
-            background-image: url(images.jpeg);
-            background-attachment: scroll;
-            background-size: cover; 
-             }
-             h1{
-
-
-                background-color: aqua;
-                padding: 20px;
-                text-align: center;
-             }
-
-
-
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>This is My class work</h1>
-    <br><br><br><br><br><br><br><br><br><br><br>
-     <br><br><br><br><br><br><br><br><br><br><br>
-     <br><br><br><br><br><br><br><br><br><br><br>
-     <br><br><br><br><br><br><br><br><br><br><br>
-    
-
-
-
-
-    
+    <div>
+        This is my animation project.
+    </div>
 </body>
 </html>
