--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
-        This is my animation project.
-    </div>
+    <h1>Typography</h1>
+    <p class="text1">Welcome to codingal</p>
+    <p class="p1">Welcome to codingal</p>
 </body>
 </html>
