--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Typography</h1>
-    <p class="text1">Welcome to codingal</p>
-    <p class="p1">Welcome to codingal</p>
+    <h1>codingal</h1>
+    <h2>codingal</h2>
+    <h3>CODINGAL</h3>
+    <h4>CODINGAL</h4>
+    
 </body>
 </html>
