--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>codingal</h1>
-    <h2>codingal</h2>
-    <h3>CODINGAL</h3>
-    <h4>CODINGAL</h4>
+    <h1 id="text">We can use text shadow to give shadow to text itself</h1>
+    <h1 id="box">Or use box-shadow to give shadow to the Element</h1>
+    <div>
+        <p>This is an Example of text-indent.</p>
+        <p id="indent">This is an Example of text-indent</p>
+    </div>
+    
     
 </body>
 </html>
