--- a/index.html
+++ b/index.html
@@ -7,13 +7,25 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 id="text">We can use text shadow to give shadow to text itself</h1>
-    <h1 id="box">Or use box-shadow to give shadow to the Element</h1>
-    <div>
-        <p>This is an Example of text-indent.</p>
-        <p id="indent">This is an Example of text-indent</p>
-    </div>
+    <h1>Welcome to Space Explorer's Club</h1>
+
+
+    <ul>
+        <li>Moon Missions</li>
+        <li>Mars Rovers</li>
+        <li>International Space Station</li>
+
+
+    </ul>
     
+    <p>
+       Space Exploration has always 
+       captivated human imagination
+    </p>
+
+    <a>Join our Mission</a>
+    <a>Latest Space news</a>
+    <a>Gallery of the universe</a>
     
 </body>
 </html>
