--- a/index.html
+++ b/index.html
@@ -1,37 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   
     <title>Document</title>
-    <style>
-        body{
-            background-image: url(images.jpeg);
-            background-attachment: scroll;
-            background-size: cover; 
-             }
-             h1{
-
-
-                background-color: aqua;
-                padding: 20px;
-                text-align: center;
-             }
-
-
-
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>This is My class work</h1>
-    <br><br><br><br><br><br><br><br><br><br><br>
-     <br><br><br><br><br><br><br><br><br><br><br>
-     <br><br><br><br><br><br><br><br><br><br><br>
-     <br><br><br><br><br><br><br><br><br><br><br>
-    
+    <h2>POSITIONING</h2>
+    <div>
+        Div with no position property
+    </div>
 
+    <div class="sticky">
+        Div with sticky position property
+    </div>
 
+    <div class="relative">
+        This div element has position :relative;
+    </div>
 
+    <div class="absolute">
+        Absolute class div
+    </div>
+
+    <div class="fixed">
+        Div with fixed position property
+    </div>
+
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
     
 </body>
